sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:11: error: ')' expected but 'else' found.
    } else if (i > 0){
      ^