sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var length:Int = getNombreValeurs()
  var continuer:Boolean = true
  var i:Int = 0
  while (continuer){
    if (i == length){
      continuer = false
    } else if (plusPetit(i,i+1) && (i < length){
      i += 1
    } else if (i > 0){
      i -= 1
    }
  }
}

def combSort() {
  var length:Int = getNombreValeurs()
  var ecart:Int = length
  var continuer:Boolean = true
  var i:Int = 0
  while(ecart>1 || continuer){
    continuer = false
    if (ecart > 1){
      ecart = (ecart.toDouble / 1.3).toInt
    }
    i = 0
    while(i+ecart < length){
      if (!plusPetit(i,i+ecart)){
        echange(i,i+ecart)
        continuer = true
      }
      i += 1
    }
  }
}